--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,16 @@
     "name": "pihedy/woocommerce-order-last-modification",
     "description": "TODO",
     "type": "project",
+    "authors": [
+        {
+            "name": "Pihe Edmond",
+            "email": "pihedy@gmail.com"
+        }
+    ],
     "autoload": {
+        "files": [
+            "src/app/Foundation/helpers.php"
+        ],
         "psr-4": {
             "Goat\\" : "src/app/"
         }
