--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "monolog/monolog": "^1.24",
         "pimple/pimple": "^3",
         "nette/caching": "^3.0",
-        "illuminate/support": "^7.0"
+        "illuminate/support": "^7.0",
+        "league/plates": "^3.4",
+        "league/booboo": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
