Update composer json.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pihedy/woocommerce-order-last-modification",
+    "name": "pihedy/turbo-goat",
     "description": "TODO",
     "type": "project",
     "authors": [
@@ -21,9 +21,7 @@
     },
     "require": {
         "php": ">=7.2",
-        "monolog/monolog": "^1.24",
         "pimple/pimple": "^3",
-        "nette/caching": "^3.0",
         "illuminate/support": "^7.0",
         "league/plates": "^3.4",
         "league/booboo": "^2.0"
